fix: fix double scrollbar issue on neon-page

--- a/src/sass/components/_page.scss
+++ b/src/sass/components/_page.scss
@@ -14,7 +14,7 @@
 
     .neon-page__container {
       @include layout.min-height(100);
-      overflow-x: hidden;
+      overflow: hidden;
 
       @include responsive.responsive(larger-than-tablet) {
         padding-left: var(--neon-gutter-desktop);
